# tts-api-python-legacy

./: CHANGELOG.md  README.md  VERSION.md  pyproject.toml  requirements.txt  setup.py
tts_service_api/: VERSION.py
