[build-system]
requires = ["grpcio-tools>=1.48.2,<1.63", "setuptools>=59"]
build-backend = "setuptools.build_meta"

[project]
name = "techmo-tts-api"
description = "Techmo TTS Service API"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Techmo sp. z o.o", email = "kontakt@techmo.pl" }]
requires-python = ">=3.6.13"
dependencies = ["grpcio>=1.48.2,<1.63", "protobuf>=4.21.0,<5"]

[project.urls]
repository = "https://github.com/techmo-pl/tts-api-python"

[tool.setuptools.dynamic]
version = { attr = "tts_service_api.VERSION.__version__" }

[tool.setuptools.packages.find]
include = ["tts_service_api*"]
